--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,135 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 2rem;
+  font-family: "Times n";
+  color: black; /* Dark grey text color */
+  background-color: #f5f5f5; /* Light grey background color */
+}
+
+.app {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
+}
+
+h1 {
+  text-align: center;
+  background-color: #2196f3; /* Blue background color */
+  color: #fff; /* White text color */
+  font-size: 6rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 2rem 0;
+}
+
+.add-form {
+  background-color: #4caf50; /* Green background color */
+  padding: 2rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+h3 {
+  margin-right: 1rem;
+  font-size: 1.8rem;
+  color: #fff; /* White text color */
+}
+
+button,
+select,
+input {
+  background-color: #fff; /* White background color */
+  color: #333; /* Dark grey text color */
+  font-family: inherit;
+  border: none;
+  border-radius: 5px;
+  padding: 1rem 2rem;
+  font-weight: 700;
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
+.add-form button {
+  text-transform: uppercase;
+  background-color: white; /* Blue background color */
+  color: #fff; /* White text color */
+}
+
+.list {
+  background-color: #73c2fb; /* Dark grey background color */
+  color: #fff; /* White text color */
+  padding: 2rem 0;
+
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
+}
+
+.actions button,
+.list select {
+  text-transform: uppercase;
+  padding: 0.8rem 1.6rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin: 0 0.5rem;
+  background-color: #3498db; /* Blue background color */
+  color: #fff; /* White text color */
+}
+
+.list ul {
+  list-style: none;
+  width: 80%;
+  overflow: scroll;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
+  justify-content: center;
+  align-content: start;
+}
+
+.list li {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+input[type="checkbox"] {
+  height: 1.5rem;
+  width: 1.5rem;
+  accent-color: #3498db; /* Blue color */
+}
+
+.list li button {
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 1.6rem;
+  padding: 0.8rem;
+  transform: translateY(2px);
+  color: #3498db; /* Blue color */
+}
+
+.stats {
+  background-color: #2196f3; 
+  color: #fff; 
+  text-align: center;
+  font-weight: 700;
+  padding: 2rem 0;
 }
